--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Python application test with Github Actions
-on: [push]
-  jobs:
-    build:
+on: push
+jobs:
+  build:
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v2
